# Kirox_Ros2Robot

./: .gitignore  command.txt  package.xml  requirements.txt  run_kirox.sh  setup.cfg  setup.py
kirox_robot/: kirox_camera.py  robotbody.py  robotbrain.py  robotears.py  roboteyes.py  robotface.py  robotmouth.py  serial_test.py  trainingnode.py  ws_connection.py
kirox_robot/ deprecated/: robotbrain_old.py  robotsetting.py  wakeword_trigger.py  wakewordtest.py
kirox_robot/logreg/: oldandslow.csv  train.py  tri_scores.csv
kirox_robot/models/: alice_v5.onnx  kirox-colab.onnx  kirox-colab.tflite  kirox.onnx  logreg_model.pth
kirox_robot/robotclient/: client_api.py  get_config.py
launch/: kirox_robot.launch.py
