<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kirox_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dennyluu1215@gmail.com">del1215</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 依賴 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- 建置工具（建議補上） -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 測試 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 執行期依賴（apt 可裝） -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>libportaudio2</exec_depend>
  <exec_depend>pulseaudio-utils</exec_depend>

  <!-- 如果有提供/使用 launch，建議加（可選） -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
